[java] Don't filter overrides for go to symbol in dumb mode
#IDEA-339786 Fixed

GitOrigin-RevId: b91406a518055a349d87d126ee315f7deeb26363